# film_library

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.bat  build.sh  build_and_run.bat  run.bat  run.sh  test.bat  test.sh
data/: badData.csv.test
include/core/: ActorManager.h  DataManager.h
include/core/algorithms/: AvlTree.h  BinarySearch.h  OptimalBST.h  QuickSort.h  RabinKarp.h
include/core/index/: IndexManager.h  SortCache.h
include/core/models/: Actor.h  Movie.h
include/core/storage/: ActorCsvMapper.h  CsvParser.h  MovieCsvMapper.h
include/core/utils/: Logger.h
include/gui/: AppController.h  AppWindow.h  ImageLoader.h  Style.h
include/gui/widgets/: ActorFormDialog.h  ActorsTab.h  ConfirmDialog.h  FilmsTab.h  GuiUtils.h  HomeTab.h  MainWidget.h  MovieFormDialog.h  MovieTableWidget.h  NotificationManager.h  SearchPanel.h
src/app/: CMakeLists.txt  main.cpp
src/core/: ActorManager.cpp  CMakeLists.txt  DataManager.cpp
src/core/algorithms/: BinarySearch.cpp  OptimalBST.cpp  QuickSort.cpp  RabinKarp.cpp
src/core/index/: IndexManager.cpp  SortCache.cpp
src/core/storage/: ActorCsvMapper.cpp  CsvParser.cpp  MovieCsvMapper.cpp
src/core/utils/: Logger.cpp
src/gui/: AppController.cpp  AppWindow.cpp  CMakeLists.txt  ImageLoader.cpp
src/gui/widgets/: ActorFormDialog.cpp  ActorsTab.cpp  ConfirmDialog.cpp  FilmsTab.cpp  GuiUtils.cpp  HomeTab.cpp  MainWidget.cpp  MovieFormDialog.cpp  MovieTableWidget.cpp  NotificationManager.cpp  SearchPanel.cpp
tests/: CMakeLists.txt  TestFramework.h  main_test.cpp  test_actor_manager.cpp  test_app_controller.cpp  test_avl_tree.cpp  test_binary_search.cpp  test_csv_parser.cpp  test_data_manager.cpp  test_index_manager.cpp  test_optimal_bst.cpp  test_quick_sort.cpp  test_rabin_karp.cpp  test_sort_cache.cpp
